package com.directi.training.dip.exercice_refactored;

public interface IDatabase {
    public int write(String inputString);
}
